cmake_minimum_required(VERSION 3.20)

project("aoc2020")

add_executable(day01 01.cpp)
add_executable(day02 02.cpp)
add_executable(day03 03.cpp)
add_executable(day04 04.cpp)
add_executable(day05 05.cpp)
add_executable(day06 06.cpp)
add_executable(day07 07.cpp)
add_executable(day08 08.cpp)
add_executable(day09 09.cpp)
add_executable(day10 10.cpp)
add_executable(day11 11.cpp)
